--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,26 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Mosazghi Yohannes Tesfazghi. Portfolio website. Studying Electrical Engineering at Norwegian University of Science and Technology (NTNU). Interested in software development and electronics."
+        />
+        <meta
+            name="keywords"
+            content="Mosazghi Yohannes Tesfazghi, Electrical Engineering, NTNU, Software Development, Electronics, Portfolio"
+        />
+        <meta name="author" content="Mosazghi Yohannes Tesfazghi" />
+        <link rel="canonical" href="https://mostes.no" />
+
+        <meta property="og:title" content="Mosazghi | Portfolio" />
+        <meta
+            property="og:description"
+            content="Mosazghi Yohannes Tesfazghi. Portfolio website. Studying Electrical Engineering at Norwegian University of Science and Technology (NTNU). Interested in software development and electronics."
+        />
+        <meta property="og:image" content="https://mostes.no/profile-icon.png" />
+        <meta property="og:url" content="https://mostes.no" />
+        <meta property="og:type" content="website" />
+
         <title>Mosazghi | Portfoilo</title>
         <link rel="icon" type="image/x-icon" href="/profile-icon.png" />
     </head>
